# EditorDocAIAgentV1

./: .gitignore  README.md  app.py  models.py  pyproject.toml  requirements.txt  routes.py
debug/: ai_analyzer_request.txt  ai_analyzer_response.txt  result.txt  text_content.txt
instance/: dreamer_document_ai.db
migrations/: env.py
migrations/versions/: 2d96795ee821_add_document_metadata_fields.py  8f3ba878026a_initial_migration.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
uploads/: 56becc5e0cb1438fa0a743d3f9f5ff83_docx
utils/: ai_analyzer.py  document_processor.py  stripe_utils.py
